--- a/Pct_Check.ipynb
+++ b/Pct_Check.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Pct_Check.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNhLtmlTj5j3mYFsUTmHku9",
+      "authorship_tag": "ABX9TyObVFKGEUr7fpF9Q6kbq/Nw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,7 +309,7 @@
       "source": [
         "get_max_Pct_5(Sym_S)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +340,46 @@
             "!!!IHL.BK today percentile position is 91.0\n",
             "!!!ILINK.BK today percentile position is 90.0\n",
             "!!!INGRS.BK today percentile position is 98.0\n",
-            "!!!J.BK today percentile position is 98.0\n"
+            "!!!J.BK today percentile position is 98.0\n",
+            "!!!JUTHA.BK today percentile position is 93.0\n",
+            "!!!MBK.BK today percentile position is 91.0\n",
+            "!!!MCS.BK today percentile position is 99.0\n",
+            "!!!MIDA.BK today percentile position is 94.0\n",
+            "!!!MSC.BK today percentile position is 96.0\n",
+            "!!!NER.BK today percentile position is 94.0\n",
+            "!!!NTV.BK today percentile position is 94.0\n",
+            "!!!NVD.BK today percentile position is 96.0\n",
+            "!!!PORT.BK today percentile position is 94.0\n",
+            "!!!PRIME.BK today percentile position is 99.0\n",
+            "!!!RBF.BK today percentile position is 90.0\n",
+            "!!!SAT.BK today percentile position is 97.0\n",
+            "!!!SCI.BK today percentile position is 98.0\n",
+            "!!!SFLEX.BK today percentile position is 92.0\n",
+            "!!!SKE.BK today percentile position is 93.0\n",
+            "!!!SKN.BK today percentile position is 98.0\n",
+            "!!!SLP.BK today percentile position is 95.0\n",
+            "!!!SNC.BK today percentile position is 91.0\n",
+            "!!!SPALI.BK today percentile position is 96.0\n",
+            "!!!SQ.BK today percentile position is 95.0\n",
+            "!!!SRICHA.BK today percentile position is 92.0\n",
+            "!!!STARK.BK today percentile position is 94.0\n",
+            "!!!SUSCO.BK today percentile position is 98.0\n",
+            "!!!SVI.BK today percentile position is 93.0\n",
+            "!!!SVOA.BK today percentile position is 97.0\n",
+            "!!!TFI.BK today percentile position is 99.0\n",
+            "!!!TH.BK today percentile position is 97.0\n",
+            "!!!TK.BK today percentile position is 99.0\n",
+            "!!!TKN.BK today percentile position is 97.0\n",
+            "!!!TPBI.BK today percentile position is 90.0\n",
+            "!!!TRUBB.BK today percentile position is 94.0\n",
+            "!!!TSR.BK today percentile position is 99.0\n",
+            "!!!TSTH.BK today percentile position is 95.0\n",
+            "!!!TVO.BK today percentile position is 96.0\n",
+            "!!!TWPC.BK today percentile position is 94.0\n",
+            "!!!UPOIC.BK today percentile position is 92.0\n",
+            "!!!UV.BK today percentile position is 96.0\n",
+            "!!!VIBHA.BK today percentile position is 98.0\n",
+            "!!!7UP.BK today percentile position is 97.0\n"
           ],
           "name": "stdout"
         }
@@ -362,8 +401,8 @@
         "            end_date = \"{0}-{1}-{2}\".format(s2.day, s2.month, s2.year)\r\n",
         "\r\n",
         "            DF = web.get_data_yahoo(i,start=start_date,end=end_date)\r\n",
-        "            Vol_5day = DF.rolling(10).mean()[\"Volume\"]\r\n",
-        "            DF[\"Dif\"] = Vol_5day - DF[\"Volume\"]\r\n",
+        "            Vol_10day = DF.rolling(10).mean()[\"Volume\"]\r\n",
+        "            DF[\"Dif\"] = Vol_10day - DF[\"Volume\"]\r\n",
         "            DF['Percentile'] = pd.qcut(DF['Dif'], 100, labels=False)\r\n",
         "          \r\n",
         "            if DF['Percentile'].iloc[-1] >= 90 :\r\n",
@@ -375,13 +414,114 @@
         "        except:\r\n",
         "            continue"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DVIJl_Lx2yhU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DVIJl_Lx2yhU",
+        "outputId": "fcdb4234-65c0-4d5d-d13b-d648d1911c19"
+      },
+      "source": [
+        "get_max_Pct_10(Sym_S)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "!!!AGE.BK today percentile position is 91.0\n",
+            "!!!AH.BK today percentile position is 94.0\n",
+            "!!!AI.BK today percentile position is 91.0\n",
+            "!!!AJA.BK today percentile position is 92.0\n",
+            "!!!AMARIN.BK today percentile position is 91.0\n",
+            "!!!ANAN.BK today percentile position is 91.0\n",
+            "!!!APCS.BK today percentile position is 90.0\n",
+            "!!!APURE.BK today percentile position is 99.0\n",
+            "!!!AS.BK today percentile position is 99.0\n",
+            "!!!ASIMAR.BK today percentile position is 99.0\n",
+            "!!!AYUD.BK today percentile position is 94.0\n",
+            "!!!BANPU.BK today percentile position is 96.0\n",
+            "!!!BCPG.BK today percentile position is 92.0\n",
+            "!!!BKD.BK today percentile position is 95.0\n",
+            "!!!BKI.BK today percentile position is 97.0\n",
+            "!!!BLA.BK today percentile position is 96.0\n",
+            "!!!CBG.BK today percentile position is 90.0\n",
+            "!!!CCP.BK today percentile position is 91.0\n",
+            "!!!CPI.BK today percentile position is 97.0\n",
+            "!!!CPNCG.BK today percentile position is 93.0\n",
+            "!!!CSS.BK today percentile position is 99.0\n",
+            "!!!CWT.BK today percentile position is 96.0\n",
+            "!!!DDD.BK today percentile position is 93.0\n",
+            "!!!EA.BK today percentile position is 97.0\n",
+            "!!!EE.BK today percentile position is 98.0\n",
+            "!!!EP.BK today percentile position is 99.0\n",
+            "!!!EVER.BK today percentile position is 93.0\n",
+            "!!!GPSC.BK today percentile position is 93.0\n",
+            "!!!HMPRO.BK today percentile position is 92.0\n",
+            "!!!IHL.BK today percentile position is 97.0\n",
+            "!!!III.BK today percentile position is 93.0\n",
+            "!!!INET.BK today percentile position is 96.0\n",
+            "!!!INGRS.BK today percentile position is 99.0\n",
+            "!!!IT.BK today percentile position is 93.0\n",
+            "!!!KCAR.BK today percentile position is 96.0\n",
+            "!!!KWG.BK today percentile position is 95.0\n",
+            "!!!MCS.BK today percentile position is 95.0\n",
+            "!!!METCO.BK today percentile position is 90.0\n",
+            "!!!MNRF.BK today percentile position is 99.0\n",
+            "!!!NER.BK today percentile position is 95.0\n",
+            "!!!NFC.BK today percentile position is 92.0\n",
+            "!!!NTV.BK today percentile position is 95.0\n",
+            "!!!NVD.BK today percentile position is 93.0\n",
+            "!!!PRIME.BK today percentile position is 96.0\n",
+            "!!!PSL.BK today percentile position is 92.0\n",
+            "!!!QHPF.BK today percentile position is 97.0\n",
+            "!!!RJH.BK today percentile position is 91.0\n",
+            "!!!SAMCO.BK today percentile position is 98.0\n",
+            "!!!SAT.BK today percentile position is 92.0\n",
+            "!!!SKE.BK today percentile position is 96.0\n",
+            "!!!SLP.BK today percentile position is 94.0\n",
+            "!!!SOLAR.BK today percentile position is 93.0\n",
+            "!!!SPALI.BK today percentile position is 90.0\n",
+            "!!!SRICHA.BK today percentile position is 94.0\n",
+            "!!!STARK.BK today percentile position is 96.0\n",
+            "!!!SUSCO.BK today percentile position is 91.0\n",
+            "!!!SVOA.BK today percentile position is 95.0\n",
+            "!!!SYNEX.BK today percentile position is 96.0\n",
+            "!!!TCC.BK today percentile position is 93.0\n",
+            "!!!TFI.BK today percentile position is 99.0\n",
+            "!!!TGPRO.BK today percentile position is 96.0\n",
+            "!!!TH.BK today percentile position is 94.0\n",
+            "!!!TK.BK today percentile position is 99.0\n",
+            "!!!TPA.BK today percentile position is 98.0\n",
+            "!!!TPBI.BK today percentile position is 95.0\n",
+            "!!!TR.BK today percentile position is 96.0\n",
+            "!!!TRUBB.BK today percentile position is 94.0\n",
+            "!!!TSR.BK today percentile position is 96.0\n",
+            "!!!TSTH.BK today percentile position is 93.0\n",
+            "!!!TTA.BK today percentile position is 90.0\n",
+            "!!!TVO.BK today percentile position is 94.0\n",
+            "!!!UMI.BK today percentile position is 90.0\n",
+            "!!!UPOIC.BK today percentile position is 99.0\n",
+            "!!!UV.BK today percentile position is 99.0\n",
+            "!!!VIBHA.BK today percentile position is 97.0\n",
+            "!!!VPO.BK today percentile position is 92.0\n",
+            "!!!WIIK.BK today percentile position is 98.0\n",
+            "!!!WORK.BK today percentile position is 91.0\n",
+            "!!!7UP.BK today percentile position is 94.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EaKMc_T05onZ"
       },
       "source": [
         ""
