--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNWL5JoLnmTjrF0d6oigEIf",
+      "authorship_tag": "ABX9TyPRkQac/lKFLJ8t5UBPvpTd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,7 @@
         "# **ATTENTION**\n",
         "# 1) don't forget to check your coin in account\n",
         "# 2) set : coin\n",
-        "# 3) set : rent_percentage"
+        "# 3) set : lendind_percentage"
       ]
     },
     {
@@ -249,7 +249,7 @@
       },
       "source": [
         "coin = 1 # \n",
-        "rent_percentage = .6 # percentage X/100 , 60% = 60/100 = .6"
+        "rent_percentage = .6 # lending_percentage X/100 , 60% = 60/100 = .6"
       ],
       "execution_count": 25,
       "outputs": []
