--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPRkQac/lKFLJ8t5UBPvpTd",
+      "authorship_tag": "ABX9TyOCdB7guhA1h39Bd64rHym1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,7 @@
         "# **ATTENTION**\n",
         "# 1) don't forget to check your coin in account\n",
         "# 2) set : coin\n",
-        "# 3) set : lendind_percentage"
+        "# 3) set : lending_percentage"
       ]
     },
     {
