--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOCdB7guhA1h39Bd64rHym1",
+      "authorship_tag": "ABX9TyMIWmCC/UmRzxDBHSDX2M17",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,12 +139,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gRgKB6hMESgy"
+      },
+      "source": [
+        "# **LOGIN HERE !!!**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "d9RsA3vigwtd"
       },
       "source": [
-        "Public_URL = 'https://ftx.com/api'\n",
+        "Public_URL = 'https://ftx.com/api' # don't change\n",
         "ApiKey = \"gtiu5hQbvzwhOYpCYH35xcjUQ8GySUUGNCw4jnN\"\n",
         "Secret = \"X0C9xO2BJFARMUsxeWz6ABKz1xGk3sctMq1qGsg\"\n",
         "my_subaccount_nickname  = \"BOTRebalanceXRP\"\n",
