--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMIWmCC/UmRzxDBHSDX2M17",
+      "authorship_tag": "ABX9TyP9+v5boMltkyQUWx1XCBI0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,7 +153,7 @@
         "id": "d9RsA3vigwtd"
       },
       "source": [
-        "Public_URL = 'https://ftx.com/api' # don't change\n",
+        "Public_URL = 'https://ftx.com/api'\n",
         "ApiKey = \"gtiu5hQbvzwhOYpCYH35xcjUQ8GySUUGNCw4jnN\"\n",
         "Secret = \"X0C9xO2BJFARMUsxeWz6ABKz1xGk3sctMq1qGsg\"\n",
         "my_subaccount_nickname  = \"BOTRebalanceXRP\"\n",
@@ -304,72 +304,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0_hefB45BhY5",
-        "outputId": "709f9d75-2099-4668-8e65-d39404db66b9"
-      },
-      "source": [
-        "check()"
-      ],
-      "execution_count": 48,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "total port value is 0.9826328519487182 USD\n",
-            "total USD is 0.10103862\n",
-            "total USD available to borrow is 0.10103862\n",
-            "total USD% of 0.6 amount is 0.060623171999999996\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "deRYxLLwJ8BT",
-        "outputId": "1e904d5b-e4f1-45df-f6d1-738601ee275d"
-      },
-      "source": [
-        "if balance[coin][\"availableWithoutBorrow\"] > balance[coin]['total']*rent_percentage :\n",
-        " # balance > rent_percentage\n",
-        "  if balance[coin][\"availableWithoutBorrow\"] - balance[coin]['total']*(1-(rent_percentage)) > 1 :\n",
-        "    lending(balance[coin]['total']*rent_percentage)\n",
-        "  else :\n",
-        "    print(\"available > {}% , not enough money\".format(rent_percentage*100))\n",
-        "    pass\n",
-        "\n",
-        "  # balance < rent_percentage\n",
-        "elif balance[coin][\"availableWithoutBorrow\"] < balance[coin]['total']*rent_percentage :\n",
-        "    if balance[coin][\"availableWithoutBorrow\"] - balance[coin]['total']*(1-(rent_percentage)) > 1 :\n",
-        "      lending(balance[coin][\"availableWithoutBorrow\"] - balance[coin]['total']*(1-(rent_percentage)))\n",
-        "    else :\n",
-        "      print(\"available > {}% , not enough money\".format(balance[coin]['total']*(1-(rent_percentage))*100))\n",
-        "      pass\n",
-        "\n",
-        "else:\n",
-        "  print(\"do nothing cause rate no c\")"
-      ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "available > 60.0% , not enough money\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "jdrUPlIGC_9H"
       },
       "source": [
@@ -401,27 +335,50 @@
         " # balance > rent_percentage (con 1)\n",
         "    if balance[coin][\"availableWithoutBorrow\"] - balance[coin]['total']*(1-(rent_percentage)) > 1 :\n",
         "      lending(balance[coin]['total']*rent_percentage)\n",
-        "      print(\"lending total {}\".format(balance[1]['total']*rent_percentage))\n",
+        "      print(\"lending {} total {}\".format(balance[coin][\"coin\"], balance[1]['total']*rent_percentage))\n",
         "\n",
-        "     \n",
         "    else :\n",
-        "      print(\"available > {}% , not enough money\".format(rent_percentage*100))\n",
+        "      print(\"{} available > {}% , No enough money\".format(balance[coin][\"coin\"], rent_percentage*100))\n",
         "    \n",
         "  # balance < rent_percentage (con 2)\n",
         "  elif balance[coin][\"availableWithoutBorrow\"] < balance[coin]['total']*rent_percentage :\n",
         "    if balance[coin][\"availableWithoutBorrow\"] - balance[coin]['total']*(1-(rent_percentage)) > 1 :\n",
         "      lending(balance[coin][\"availableWithoutBorrow\"] - balance[coin]['total']*(1-(rent_percentage)))\n",
-        "      print(\"lending total {}\".format(balance[1][\"availableWithoutBorrow\"] - balance[coin]['total']*(1-(rent_percentage))))\n",
+        "      print(\"lending {} total {}\".format(balance[coin][\"coin\"], balance[1][\"availableWithoutBorrow\"] - balance[coin]['total']*(1-(rent_percentage))))\n",
+        "\n",
         "    else :\n",
-        "      print(\"available > {}% , not enough money\".format(balance[coin]['total']*(1-(rent_percentage))*100))\n",
+        "      print(\"{} available > {}% , No enough money\".format(balance[coin][\"coin\"], balance[coin]['total']*(1-(rent_percentage))*100))\n",
         "      pass\n",
         "\n",
         "  # con 3\n",
         "  else: \n",
         "    print(\"do nothing cause rate no change\")"
       ],
-      "execution_count": 39,
+      "execution_count": 53,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IzlQylwAGNEi",
+        "outputId": "b0099741-3fa7-41b6-e47d-a5614ea79e6a"
+      },
+      "source": [
+        "lending_condition(rent_percentage)"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "USD available > 60.0% , not enough money\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
