--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP9+v5boMltkyQUWx1XCBI0",
+      "authorship_tag": "ABX9TyPz6k0SRAsy9/+HLy+69rik",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,12 +35,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zifAYBQgfzcD",
-        "outputId": "112a0585-b1aa-48e2-b8f4-13ed5a3fb19d"
+        "outputId": "d536c142-32b3-46dc-f423-bb5710e3d90f"
       },
       "source": [
         "pip install ftx"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -49,10 +49,10 @@
             "Requirement already satisfied: satoshi==0.1.3 in /usr/local/lib/python3.7/dist-packages (from ftx) (0.1.3)\n",
             "Requirement already satisfied: schedule==0.6.0 in /usr/local/lib/python3.7/dist-packages (from ftx) (0.6.0)\n",
             "Requirement already satisfied: requests==2.23.0 in /usr/local/lib/python3.7/dist-packages (from ftx) (2.23.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (2020.12.5)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (2.10)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (3.0.4)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (1.24.3)\n"
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (2.10)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0->ftx) (2020.12.5)\n"
           ],
           "name": "stdout"
         }
@@ -65,12 +65,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3yjTeu7LgfDH",
-        "outputId": "bbf9d7c6-bbcf-4819-8f8b-be27c1ef7aa8"
+        "outputId": "031ccbfe-9b91-4dcd-bc15-4ac1ee011cf1"
       },
       "source": [
         "pip install ciso8601"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,33 +88,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iIziglL3gk7R",
-        "outputId": "bc8e2da1-5d8e-4dd4-c9fd-a28159ef90b7"
+        "outputId": "42ea8bb9-7766-428e-9df5-a9706ba9dbf1"
       },
       "source": [
         "pip install ccxt"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: ccxt in /usr/local/lib/python3.7/dist-packages (1.43.89)\n",
-            "Requirement already satisfied: aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (3.7.4.post0)\n",
-            "Requirement already satisfied: cryptography>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from ccxt) (3.4.6)\n",
-            "Requirement already satisfied: aiodns<2.1,>=1.1.1; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (2.0.0)\n",
             "Requirement already satisfied: setuptools>=38.5.1 in /usr/local/lib/python3.7/dist-packages (from ccxt) (54.1.2)\n",
             "Requirement already satisfied: yarl==1.1.0; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (1.1.0)\n",
             "Requirement already satisfied: requests>=2.18.4 in /usr/local/lib/python3.7/dist-packages (from ccxt) (2.23.0)\n",
+            "Requirement already satisfied: aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (3.7.4.post0)\n",
             "Requirement already satisfied: certifi>=2018.1.18 in /usr/local/lib/python3.7/dist-packages (from ccxt) (2020.12.5)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (5.1.0)\n",
-            "Requirement already satisfied: async-timeout<4.0,>=3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.0.1)\n",
-            "Requirement already satisfied: chardet<5.0,>=2.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.0.4)\n",
+            "Requirement already satisfied: cryptography>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from ccxt) (3.4.6)\n",
+            "Requirement already satisfied: aiodns<2.1,>=1.1.1; python_version >= \"3.5.2\" in /usr/local/lib/python3.7/dist-packages (from ccxt) (2.0.0)\n",
+            "Requirement already satisfied: multidict>=4.0 in /usr/local/lib/python3.7/dist-packages (from yarl==1.1.0; python_version >= \"3.5.2\"->ccxt) (5.1.0)\n",
+            "Requirement already satisfied: idna>=2.0 in /usr/local/lib/python3.7/dist-packages (from yarl==1.1.0; python_version >= \"3.5.2\"->ccxt) (2.10)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.18.4->ccxt) (1.24.3)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.18.4->ccxt) (3.0.4)\n",
             "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (20.3.0)\n",
+            "Requirement already satisfied: async-timeout<4.0,>=3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.0.1)\n",
             "Requirement already satisfied: typing-extensions>=3.6.5 in /usr/local/lib/python3.7/dist-packages (from aiohttp<3.8,>=3.7.4; python_version >= \"3.5.2\"->ccxt) (3.7.4.3)\n",
             "Requirement already satisfied: cffi>=1.12 in /usr/local/lib/python3.7/dist-packages (from cryptography>=2.6.1->ccxt) (1.14.5)\n",
             "Requirement already satisfied: pycares>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from aiodns<2.1,>=1.1.1; python_version >= \"3.5.2\"->ccxt) (3.1.1)\n",
-            "Requirement already satisfied: idna>=2.0 in /usr/local/lib/python3.7/dist-packages (from yarl==1.1.0; python_version >= \"3.5.2\"->ccxt) (2.10)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.18.4->ccxt) (1.24.3)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.7/dist-packages (from cffi>=1.12->cryptography>=2.6.1->ccxt) (2.20)\n"
           ],
           "name": "stdout"
@@ -135,7 +135,7 @@
         "from requests import Request, Session, Response\n",
         "from ciso8601 import parse_datetime"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
         "# log in \n",
         "client = ftx.FtxClient(Public_URL, ApiKey, Secret, my_subaccount_nickname)"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -194,7 +194,7 @@
         "  def show_price(self):\n",
         "      print(\"pair : \", self.pair,\", price : \", self.price,\", bid : \", self.bid,\", ask : \", self.ask, \", sizeIncrement : \", self.sizeIncrement)"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -216,7 +216,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FiCBqwKskxHF",
-        "outputId": "eeb66c5f-914b-4784-ea65-845ee220523f"
+        "outputId": "14bd4234-7564-44d8-cb41-007f2354f82f"
       },
       "source": [
         "balance = client.get_balances()\n",
@@ -226,7 +226,7 @@
         "for i in range(len(balance)):\n",
         "  print(\"index {} is {}\".format(i, balance[i][\"coin\"]))"
       ],
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +260,7 @@
         "coin = 1 # \n",
         "rent_percentage = .6 # lending_percentage X/100 , 60% = 60/100 = .6"
       ],
-      "execution_count": 25,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
         "# if you have 7 coin then total port value = balance[0][\"usdValue\"] + balance[1][\"usdValue\"] + balance[2][\"usdValue\" ] + ... + balance[6][\"usdValue\"]\n",
         "# until you have all "
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -298,7 +298,7 @@
         "  print(\"total {} available to borrow is {}\".format(balance[coin][\"coin\"], balance[coin]['availableWithoutBorrow']))\n",
         "  print(\"total {}% of {} amount is {}\".format(balance[coin][\"coin\"] ,rent_percentage,balance[coin]['availableWithoutBorrow']*rent_percentage))"
       ],
-      "execution_count": 47,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -307,20 +307,20 @@
         "id": "jdrUPlIGC_9H"
       },
       "source": [
-        "def lending(*lend_amount):\n",
+        "def lending(lend_amount):\n",
         "  balance = client.get_balances()\n",
         "  USDava = balance[coin]\n",
         "  \n",
         "  client.get_position(\"spot_margin/offer\", {\n",
         "    \"coin\" : balance[coin][\"coin\"],\n",
-        "    \"size\" : *lend_amount, \n",
+        "    \"size\" : lend_amount , \n",
         "    \"rate\" : 1e-06\n",
         "    })\n",
         "  \n",
         "  print(\"lending total {} usd from total\".format(lend_amount))\n",
         "  print(client._get(\"spot_margin/lending_info\")[0])"
       ],
-      "execution_count": 36,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -354,36 +354,18 @@
         "  else: \n",
         "    print(\"do nothing cause rate no change\")"
       ],
-      "execution_count": 53,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "RuPxp_qoBUr6",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 235
         },
-        "id": "IzlQylwAGNEi",
-        "outputId": "b0099741-3fa7-41b6-e47d-a5614ea79e6a"
-      },
-      "source": [
-        "lending_condition(rent_percentage)"
-      ],
-      "execution_count": 54,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "USD available > 60.0% , not enough money\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RuPxp_qoBUr6"
+        "outputId": "0a28c457-0a04-4571-de05-c4929a13f756"
       },
       "source": [
         "def main():\n",
@@ -410,8 +392,20 @@
         "else:\n",
         "  print(\"something error\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-14-c4af69575e96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m   \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m   \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
     }
   ]
 }
