--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPz6k0SRAsy9/+HLy+69rik",
+      "authorship_tag": "ABX9TyPnM+qAq1pwNcn67JW5yJYB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,9 +204,9 @@
       },
       "source": [
         "# **ATTENTION**\n",
-        "# 1) don't forget to check your coin in account\n",
-        "# 2) set : coin\n",
-        "# 3) set : lending_percentage"
+        "1.   don't forget to check your coin in account\n",
+        "2.   set : coin\n",
+        "3.   set : lending_percentage"
       ]
     },
     {
@@ -274,6 +274,20 @@
       ],
       "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Dp7X1iFJa01"
+      },
+      "source": [
+        "# Check \"total_port_value\"\n",
+        "\n",
+        "\n",
+        "* if you have 7 coin \n",
+        "\n",
+        "* then total port value = balance[0][\"usdValue\"] + balance[1][\"usdValue\"] + balance[2][\"usdValue\" ] + ... + balance[6][\"usdValue\"] until you have all "
+      ]
     },
     {
       "cell_type": "code",
