--- a/Lending.ipynb
+++ b/Lending.ipynb
@@ -6,7 +6,7 @@
       "name": "Lending.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMZkRfjKHITw0eMex3IwXcm",
+      "authorship_tag": "ABX9TyOqOZW7FvblcYQZ1IDK8IP0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,6 +223,17 @@
         "    return int(round(_time() * 1000))"
       ],
       "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6tjEPNc-MGyh"
+      },
+      "source": [
+        "# thanks for https://github.com/a0981456759/ftx_auto_USDC_lending/blame/main/FTX/client.py#L3"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
